--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <title>Pynotes|Home</title>
 </head>
   <body>
+Here at Pynotes, we want to make a FOSS (Free and Open Source Software) text editor that is useful to everyone and anyone.
   </body>
 </html>
